css/styles.css
.row {
    display: flex;
    flex-direction: row;
}

.project {
    flex: 1;
    max-width: 33.33%;
}

.about {
    display: flex;
    flex-direction: row;
}

img {
    max-width: 80%;
    height: auto;
}

h1 {
    font-family: monospace;
}

h2 {
    font-family: monospace;
}

h3 {
    font-family: monospace;
}

p {
    font-size: 18px;
    font-family: monospace;
}

body {
    background-color: rgb(190, 188, 252);
}

